src/test/ui/dep-graph/dep-graph-assoc-type-codegen.stderr
error: OK
  --> $DIR/dep-graph-assoc-type-codegen.rs:28:5
   |
LL |     #[rustc_then_this_would_need(typeck_tables_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

